<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mergedparticles.udpsense.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:text="@string/start_capture"
        android:onClick="captureButtonListener" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/captureButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="85dp"
        android:text="@string/address_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addressValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addressLabel"
        android:layout_alignBottom="@+id/addressLabel"
        android:layout_alignRight="@+id/portValue"
        android:layout_toRightOf="@+id/accelerationLabel"
        android:hint="@string/address_hint"
        android:text="@string/address_hint"
        android:ems="10" />

    <TextView
        android:id="@+id/portLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressLabel"
        android:layout_alignTop="@+id/addressLabel"
        android:layout_marginTop="40dp"
        android:text="@string/port_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/portValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/portLabel"
        android:layout_alignBottom="@+id/portLabel"
        android:layout_toRightOf="@+id/accelerationLabel"
        android:hint="@string/port_hint"
        android:text="@string/port_hint"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/accelerationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/acceleration_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/accelerationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/accelerationLabel"
        android:layout_alignRight="@+id/addressValue"
        android:text="@string/acceleration_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
